--- a/app/src/main/res/layout/activity_doctor_profile.xml
+++ b/app/src/main/res/layout/activity_doctor_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/doctor_drawer"
     tools:openDrawer="start"
-    tools:context=".DoctorProfile">
+    tools:context=".activity.DoctorProfile">
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
