--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/about_us_drawer"
     tools:openDrawer="start"
-    tools:context=".AboutUs">
+    tools:context=".activity.AboutUs">
 
     <LinearLayout
         android:layout_width="match_parent"
