--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,8 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".HomeActivity"
-    tools:openDrawer="start">
+    tools:context=".activity.HomeActivity"
+    tools:openDrawer="start"
+    android:layoutDirection="ltr">
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -160,7 +161,6 @@
                 </LinearLayout>
             </LinearLayout>
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -209,7 +209,6 @@
                     android:layout_weight="2"
                     android:src="@drawable/pedometer" />
             </LinearLayout>
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -306,6 +305,13 @@
                     android:layout_weight="2"
                     android:src="@drawable/blood" />
             </LinearLayout>
+
+            <Button
+                android:id="@+id/btn_save_data"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:text="save"/>
 
         </LinearLayout>
 
