--- a/app/src/main/res/layout/activity_show_user_profile.xml
+++ b/app/src/main/res/layout/activity_show_user_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:openDrawer="start"
     android:id="@+id/show_user_drawer"
-    tools:context=".EditUserProfile">
+    tools:context=".activity.EditUserProfile">
 
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
